# smart_com

./: CMakeLists.txt  library.cpp  library.h
include/monad/: either.h  left.h  right.h
smarteam/: constatns.h
smarteam/data/: data_helper.cpp  data_helper.h
smarteam/data/providers/: smarteam_provider.cpp  smarteam_provider.h
src/: app_context.cpp  app_context.h
src/common/: base_types.h
src/common/helpers/: data_helper.cpp  data_helper.h  geteway_helper.cpp  geteway_helper.h  helper.cpp  helper.h  string_helper.cpp  string_helper.h
src/crypto/data/ports/providers/: crypto_provider.h  sid_provider.h  token_provider.h
src/crypto/data/providers/: crypto_provider_imp.cpp  crypto_provider_imp.h  sid_provider_imp.cpp  sid_provider_imp.h  token_provider_imp.cpp  token_provider_imp.h
src/crypto/data/repositories/: crypto_repository_imp.cpp  crypto_repository_imp.h
src/crypto/domain/use_cases/: crypto_use_cases.cpp  crypto_use_cases.h
src/crypto/domain/use_cases/ports/gateways/: crypto_gateway.h
src/crypto/domain/use_cases/ports/repositories/: crypto_repository.h
src/crypto/gateways/: crypto_gateway_imp.cpp  crypto_gateway_imp.h
src/smarteam/: constatns.h  helper.cpp  helper.h
src/smarteam/data/: data_helper.cpp  data_helper.h
src/smarteam/data/exceptions/: class_id_exception.h
src/smarteam/data/providers/: database_provider.cpp  database_provider.h  engine_provider.cpp  engine_provider.h  session_provider.cpp  session_provider.h  smarteam_provider.cpp  smarteam_provider.h
src/smarteam/data/repositories/: smarteam_repository.cpp  smarteam_repository.h  smarteam_repository_imp.cpp  smarteam_repository_imp.h
src/smarteam/domain/enums/: password_type.h
src/smarteam/domain/use_cases/: user_use_cases.cpp  user_use_cases.h
src/smarteam/domain/use_cases/ports/gateways/: user_gateway.h
src/smarteam/domain/use_cases/ports/repositories/: smarteam_repository.h
src/smarteam/gateways/: geteway_helper.h  smarteam_gateway.cpp  smarteam_gateway.h  user_gateway_imp.cpp  user_gateway_imp.h
src/smarteam/gateways/helpers/: geteway_helper.cpp  geteway_helper.h
src/smarteam/use_cases/ports/gateways/: user_gateway.h
src/smarteam/use_cases/ports/repositories/: ismarteam_repository.h  smarteam_repository.h
test/: CMakeLists.txt  data_helper_test.cpp  database_provider_test.cpp  engine_provider_test.cpp  exceptions_test.cpp  hello_test.cpp  helper_test.cpp  main_test.cpp  session_provider_test.cpp  smarteam_provider_test.cpp  test_config.h
test/smarteam/: helper_test.cpp
test/smarteam/data/: data_helper_test.cpp
test/smarteam/data/providers/: database_provider_test.cpp  engine_provider_test.cpp  main_test.cpp  session_provider_test.cpp  smarteam_provider_test.cpp
test/smarteam/data/repositories/: smarteam_repository_test.cpp
test/smarteam/gateways/: gateway_helper_test.cpp  user_gateway_test.cpp
test/src/: app_context_test.cpp
test/src/common/helpers/: gateway_helper_test.cpp  helper_test.cpp  string_helper_test.cpp
test/src/crypto/data/providers/: crypto_provider_imp_test.cpp  sid_provider_imp_test.cpp  token_provider_imp_test.cpp
test/src/crypto/data/repositories/: crypto_repository_imp_test.cpp
test/src/crypto/domain/use_cases/: crypto_use_cases_test.cpp
test/src/crypto/gateways/: crypto_gateway_test.cpp
test/src/smarteam/: helper_test.cpp
test/src/smarteam/data/: data_helper_test.cpp
test/src/smarteam/data/providers/: database_provider_test.cpp  engine_provider_test.cpp  session_provider_test.cpp  smarteam_provider_test.cpp
test/src/smarteam/data/repositories/: smarteam_repository_test.cpp
test/src/smarteam/domain/use_case/: user_use_cases_test.cpp
test/src/smarteam/gateways/: user_gateway_test.cpp
test/src/smarteam/gateways/helpers/: gateway_helper_test.cpp
